# grams-tof

./: CMakeLists.txt  README.md
Analysis/: CMakeLists.txt
Analysis/include/: TOF_Attributes.h  TOF_ChannelConversion.h  TOF_CoincidenceChannelInfo.h  TOF_CoincidenceEvents.h  TOF_Constants.h  TOF_DiscriminatorCalibation.h  TOF_Fitting.h  TOF_Linkdef.h  TOF_ParameterScan.h  TOF_Struct.h  TOF_TdcQdcCalibration.h  TOF_TreeData.h
Analysis/macro/: biasScan.C  channelID_test.C  plotCoincidence.C  plotraw3.C  tofCoinEvt.C
Analysis/src/: TOF_Attributes.cpp  TOF_ChannelConversion.cpp  TOF_CoincidenceChannelInfo.cpp  TOF_CoincidenceEvents.cpp  TOF_DiscriminatorCalibation.cpp  TOF_Fitting.cpp  TOF_ParameterScan.cpp  TOF_TdcQdcCalibration.cpp  TOF_TreeData.cpp
